@@ -1,8 +1,8 @@
 Package: synbreed
 Type: Package
 Title: Framework for the analysis of genomic prediction data using R
-Version: 0.9-5
-Date: 2012-09-17
+Version: 0.9-4
+Date: 2012-09-18
 Author: Valentin Wimmer, Theresa Albrecht, Hans-Juergen Auinger, Chris-Carolin Schoen with contributions by Larry Schaeffer, Malena Erbe, Ulrike Ober and Christian Reimer
 Depends: R (>= 2.14), lattice, igraph0, MASS, LDheatmap, qtl, doBy, BLR, regress (>= 1.3-8), abind, synbreedData (>= 1.3)
 Maintainer: Valentin Wimmer <Valentin.Wimmer@wzw.tum.de>
